# NPC_Playing-Like-Human_CPP

./: .gitignore  CMakeLists.txt  README.md
cmake/: print_project_info.cmake  print_system_info.cmake
include/npc/: actor.hpp  base_network.hpp  constants.hpp  critic.hpp  environment.hpp  example.hpp  numbers.hpp  object.hpp  path_planning.hpp  sac.hpp  utils.hpp
include/utils/: constants.hpp  numbers.hpp  types.hpp  utils.hpp
logs/actor/: 20241022_141730_actor_network_episode1600.pth  20241024_002829_actor_network_episode1800.pt  20241024_003253_actor_network_episode1801.pt
logs/base_network/: 20241024_002829_critic1_network_episode1800.pt  20241024_112102_actor_network_episode1801.pt  20241101_120417_actor_network_episode2500.pt  20241101_120417_critic1_network_episode2500.pt  20241101_120417_critic2_network_episode2500.pt  20241105_135951_actor_network_episode4000.pt  20241105_135951_critic1_network_episode4000.pt  20241105_135951_critic2_network_episode4000.pt  20241106_054625_actor_network_episode4000.pt  20241106_054625_critic1_network_episode4000.pt  20241106_054625_critic2_network_episode4000.pt  20241112_051733_actor_network_episode5000.pt  20241112_051733_critic1_network_episode5000.pt  20241112_051733_critic2_network_episode5000.pt  20241112_185641_actor_network_episode7200.pt  20241112_185641_critic1_network_episode7200.pt  20241112_185641_critic2_network_episode7200.pt  20241122_001446_actor_network_episode275.pt  20241122_001446_critic1_network_episode275.pt  20241122_001446_critic2_network_episode275.pt  20241122_055603_actor_network_episode2000.pt  20241122_055603_critic1_network_episode2000.pt  20241122_055603_critic2_network_episode2000.pt  20241127_030207_actor_network_episode75.pt  20241127_030207_critic1_network_episode75.pt  20241127_030207_critic2_network_episode75.pt  20241127_145908_actor_network_episode500.pt  20241127_145908_critic1_network_episode500.pt  20241127_145908_critic2_network_episode500.pt
logs/critic2/: 20241024_002829_critic2_network_episode1800.pt
results/environment/: train_results.csv  train_rewards.csv
src/: CMakeLists.txt  main.cpp
src/npc/: CMakeLists.txt  actor.cpp  critic.cpp  environment.cpp  example.cpp  main.cpp  object.cpp  path_planning.cpp  plot.py  plot2.py  plot_results.py  plot_reward.py  reward_test.py  sac.cpp  test.cpp
